initial form design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,15 @@
   <nav class="uk-navbar-container" uk-navbar>
     <div class="uk-navbar-left">
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="">Register</a></li>
-            <li class=""><a href="">Players</a></li>
+            <li class="uk-active"><a href=""><span uk-icon="user" class="uk-margin-right"></span>Microsoft Minecraft Party</a></li>
         </ul>
     </div>
 </nav>
 
-<div class="uk-width-1-1">
-  <div class="uk-card uk-card-body">
-    <h3 class="uk-card-title">{{title}}</h3>
-    <p>Hellow rodl</p>
-    <app-user-registration-form></app-user-registration-form>
+<div class="uk-margin uk-margin-left uk-margin-right">
+  <div class="uk-child-width-expand@s uk-grid-match" uk-grid>
+    <div>
+      <app-user-registration-form></app-user-registration-form>
+    </div>
   </div>
 </div>
