--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -1,2 +1,13 @@
-<p>user-registration-form works!</p>
-<input type="text" id="mcalias" />
+<h3>Registration</h3>
+<p>To participate in the Minecraft event, we need to know your Minecraft alias.</p>
+<p><span class="uk-label">Hey</span> Your family members are also welcome, so feel free to register multiple aliases!</p>
+<p>After registration, open Minecraft Java Edition, hit Multiplayer and connect to microsoft.chph.io</p>
+
+<p><span>Name</span>
+<input type="text" id="mcalias" class="uk-input"/></p>
+
+<p><span>Microsoft Alias</span>
+<input type="text" id="msalias" class="uk-input"/></p>
+
+<p><input id="acceptTerms" type="checkbox"><label for="acceptTerms">Accept terms, fair-play and nice language</label></p>
+<button id="register" class="uk-button uk-button-default uk-button-primary">Register</button>
