Switch to angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
+<p>
+  <mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Microsoft Minecraft Event</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>share</mat-icon>
+    </button>
+  </mat-toolbar>
+</p>
 
-
-  <nav class="uk-navbar-container" uk-navbar>
-    <div class="uk-navbar-left">
-        <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href=""><span uk-icon="user" class="uk-margin-right"></span>Microsoft Minecraft Party</a></li>
-        </ul>
-    </div>
-</nav>
-
-<div class="uk-margin uk-margin-left uk-margin-right">
-  <div class="uk-child-width-expand@s uk-grid-match" uk-grid>
-    <div>
-      <app-user-registration-form></app-user-registration-form>
-    </div>
-  </div>
-</div>
+<app-user-registration-form></app-user-registration-form>
