--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,8 @@
   </mat-toolbar>
 </p>
 
-<app-user-registration-form></app-user-registration-form>
+<div class="contentPane">
+
+  <app-user-registration-form></app-user-registration-form>
+
+</div>
