--- a/src/styles.less
+++ b/src/styles.less
@@ -4,3 +4,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.contentPane {
+    padding-left: 2em;
+    padding-right: 2em;
+}
+.breaker {
+    margin-top: 2em;
+}
