--- a/src/styles.less
+++ b/src/styles.less
@@ -11,3 +11,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .breaker {
     margin-top: 2em;
 }
+.mat-progress-spinner circle, .mat-spinner circle {
+    stroke: #ffffff;
+    }
