azure ad authentication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,8 @@
-<p>
-  <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Microsoft Minecraft Event</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
-  </mat-toolbar>
-</p>
+<app-main-nav></app-main-nav>
 
 <div class="contentPane">
 
-  <app-user-registration-form></app-user-registration-form>
+  <router-outlet *ngIf="!isAuthenticated"></router-outlet>
+  <app-user-registration-form *ngIf="isAuthenticated"></app-user-registration-form>
 
 </div>
