removed extra dot

--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -4,7 +4,7 @@
 
     <h1>Registration</h1>
     <p>Awesome to see you here! We're putting up a huge online party for all Microsofties in Norway!</p>
-    <p>Register below to participate in our Minecraft event starting on <strong>Thu, May 20.</strong>.</p>
+    <p>Register below to participate in our Minecraft event starting on <strong>Thu, May 20</strong>.</p>
     
     <div class="breaker"></div>
   
