removed oidcsecurity lib

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -10,7 +10,7 @@
       <mat-icon>share</mat-icon>
     </button> -->
 
-    <button id="logoutBtn" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="logout()" *ngIf="isAuthenticated">
+    <button id="logoutBtn" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="logout()" *ngIf="true">
       <mat-icon>logout</mat-icon>
     </button>
   </mat-toolbar>
